# haskell-experiments

./: Brackets.hs  README.md  cabal.project  experiments.cabal  stack.yaml
Gears/: Instances.hs  Utils.hs
Problems/base/: Concurrency.hs  abt.hs  conway-game-of-life.hs  datalog.hs  decode-morse-code.hs  dijkstra-monad.hs  enumerating-trees.hs  handheld-halting.hs  heuristics.hs  minimum-number-of-jumps.hs  probability-distribution.hs  resumption.hs  reversing-a-list-with-continuations.hs  sequence-literal.hs  w-hindley-milner.hs
Problems/joint/: adjunctions.hs  cellular-automata.hs  wolf-goat-cabbage.hs
Problems/pandora/: Probability.hs  balanced-parentheses.hs  binary-tree-zipper.hs  boustrophedon.hs  cellular-automata.hs  decode-morse-code.hs  enumerating-trees.hs  json-parser.hs  lindenmayer-system.hs  longest-increasing-subsequence.hs  matrix-in-clockwise-spiral.hs  minimum-number-of-jumps.hs  path-resolver.hs  run-length-encoding.hs  stock-prices.hs  trapping-rain-water.hs  wolf-goat-cabbage.hs
Problems/pandora/DONE/: balanced-parentheses.hs  cellular-automata.hs  decode-morse-code.hs  lindenmayer-system.hs  path-resolver.hs  shaping-pyramid.hs  stock-prices.hs  trapping-rain-water.hs  wolf-goat-cabbage.hs
Problems/pandora/WIP/: abstract-binding-tree.hs  arithmetic.hs  biggest-rectangle.hs  clock-angle.hs  enumerating-trees.hs  finger-tree.hs  largest-rectangle.hs  matrix-in-clockwise-spiral.hs  minimum-number-of-jumps.hs  roman-numbers.hs  rpn-calculator.hs  run-length-encoding.hs  shaping-pyramid.hs  soundex.hs  typing-trainer.hs
base/: Batch.hs  Morse.hs  P2P.hs  PCA.hs  Waterflow.hs  binary-tree-zipper.hs  comonadic-life.hs  conway-game-of-life.hs  effectful-bft.hs  probability-distribution.hs  resumption.hs  sequence-literal.hs  wolf-goat-cabbage.hs
joint/: Waterflow.hs  adjunctions.hs  balanced-parentheses.hs  cellular-automata.hs  stock-prices.hs  trapping-rain-water.hs  wolf-goat-cabbage.hs
pandora/: Brackets.hs  Morse.hs  Probability.hs  Waterflow.hs  balanced-parentheses.hs  binary-tree-zipper.hs  ca-rule.hs  ca-rule110.hs  cellular-automata.hs  decode-morse-code.hs  enumerating-trees.hs  json-parser.hs  matrix-in-clockwise-spiral.hs  roman-numbers.hs  stock-prices.hs  trapping-rain-water.hs  wolf-goat-cabbage.hs
