name: experiments
version: 0.1.0.0
license: BSD3
license-file: LICENSE
author: iokasimov
maintainer: iokasimov.m@gmail.com
category: Web
build-type: Simple
extra-source-files: README.md
cabal-version: >=1.10

executable base-batch
  main-is: base/Batch.hs
  build-depends: base
  default-extensions:
    DataKinds,
    DeriveFunctor,
    DeriveFoldable,
    ExplicitNamespaces,
    FlexibleContexts,
    GADTs,
    LambdaCase,
    OverloadedStrings,
    PackageImports,
    RankNTypes,
    ScopedTypeVariables,
    StandaloneDeriving,
    TypeApplications,
    TypeFamilies,
    TypeOperators
  other-modules:
  default-language: Haskell2010
  ghc-options: -Wall -fno-warn-tabs

executable base-concurrency
  main-is: base/Concurrency.hs
  build-depends: base, mtl
  default-extensions:
    DataKinds,
    DeriveFunctor,
    DeriveFoldable,
    ExplicitNamespaces,
    FlexibleContexts,
    GADTs,
    LambdaCase,
    OverloadedStrings,
    PackageImports,
    RankNTypes,
    ScopedTypeVariables,
    StandaloneDeriving,
    TypeApplications,
    TypeFamilies,
    TypeOperators
  other-modules:
  default-language: Haskell2010
  ghc-options: -Wall -fno-warn-tabs

executable base-comonadic-life
  main-is: base/comonadic-life.hs
  build-depends: base, comonad, mtl
  default-extensions:
    DataKinds,
    DeriveFunctor,
    DeriveFoldable,
    ExplicitNamespaces,
    FlexibleContexts,
    GADTs,
    LambdaCase,
    OverloadedStrings,
    PackageImports,
    RankNTypes,
    ScopedTypeVariables,
    StandaloneDeriving,
    TypeApplications,
    TypeFamilies,
    TypeOperators
  other-modules:
  default-language: Haskell2010
  ghc-options: -Wall -fno-warn-tabs

executable base-conway-game-of-life
  main-is: base/conway-game-of-life.hs
  build-depends: base, mtl
  default-extensions:
    DataKinds,
    DeriveFunctor,
    DeriveFoldable,
    ExplicitNamespaces,
    FlexibleContexts,
    GADTs,
    LambdaCase,
    OverloadedStrings,
    PackageImports,
    RankNTypes,
    ScopedTypeVariables,
    StandaloneDeriving,
    TypeApplications,
    TypeFamilies,
    TypeOperators
  other-modules:
  default-language: Haskell2010
  ghc-options: -Wall -fno-warn-tabs


executable base-decode-morse-code
  main-is: base/decode-morse-code.hs
  build-depends: base, comonad, free, transformers
  default-extensions:
    DataKinds,
    DeriveFunctor,
    DeriveFoldable,
    ExplicitNamespaces,
    FlexibleContexts,
    LambdaCase,
    OverloadedStrings,
    PackageImports,
    RankNTypes,
    ScopedTypeVariables,
    StandaloneDeriving,
    TypeApplications,
    TypeFamilies,
    TypeOperators
  other-modules:
  default-language: Haskell2010
  ghc-options: -Wall -fno-warn-tabs

executable base-resumption
  main-is: base/resumption.hs
  build-depends: base, transformers
  default-extensions:
    DataKinds,
    DeriveFunctor,
    DeriveFoldable,
    ExplicitNamespaces,
    FlexibleContexts,
    LambdaCase,
    OverloadedStrings,
    PackageImports,
    RankNTypes,
    ScopedTypeVariables,
    StandaloneDeriving,
    TypeApplications,
    TypeFamilies,
    TypeOperators
  other-modules:
  default-language: Haskell2010
  ghc-options: -Wall -fno-warn-tabs

executable base-trapping-rain-water
  main-is: base/trapping-rain-water.hs
  build-depends: base, transformers
  default-extensions:
    DataKinds,
    DeriveFunctor,
    DeriveFoldable,
    ExplicitNamespaces,
    FlexibleContexts,
    LambdaCase,
    OverloadedStrings,
    PackageImports,
    RankNTypes,
    ScopedTypeVariables,
    StandaloneDeriving,
    TypeApplications,
    TypeFamilies,
    TypeOperators
  other-modules:
  default-language: Haskell2010
  ghc-options: -Wall -fno-warn-tabs

executable base-wolf-goat-cabbage
  main-is: base/wolf-goat-cabbage.hs
  build-depends: base
  default-extensions:
    DataKinds,
    DeriveFunctor,
    DeriveFoldable,
    ExplicitNamespaces,
    FlexibleContexts,
    LambdaCase,
    OverloadedStrings,
    PackageImports,
    RankNTypes,
    ScopedTypeVariables,
    StandaloneDeriving,
    TypeApplications,
    TypeFamilies,
    TypeOperators,
    ViewPatterns
  other-modules:
  default-language: Haskell2010
  ghc-options: -Wall -fno-warn-tabs

executable joint-adjunctions
  main-is: joint/adjunctions.hs
  build-depends: base, comonad, joint
  default-extensions:
    DataKinds,
    ExplicitNamespaces,
    FlexibleContexts,
    InstanceSigs,
    LambdaCase,
    LiberalTypeSynonyms,
    MultiParamTypeClasses,
    OverloadedStrings,
    PackageImports,
    RankNTypes,
    TypeApplications,
    TypeFamilies,
    TypeOperators
  other-modules:
  default-language: Haskell2010
  ghc-options: -Wall -fno-warn-tabs

executable joint-balanced-parentheses
  main-is: joint/balanced-parentheses.hs
  build-depends: base, joint, lens
  default-extensions:
    DataKinds,
    ExplicitNamespaces,
    FlexibleContexts,
    LambdaCase,
    OverloadedStrings,
    PackageImports,
    RankNTypes,
    TypeApplications,
    TypeFamilies,
    TypeOperators,
    QuantifiedConstraints
  other-modules:
  default-language: Haskell2010
  ghc-options: -Wall -fno-warn-tabs

executable joint-stock-prices
  main-is: joint/stock-prices.hs
  build-depends: base, joint, lens
  default-extensions:
    DataKinds,
    ExplicitNamespaces,
    FlexibleContexts,
    LambdaCase,
    OverloadedStrings,
    PackageImports,
    RankNTypes,
    TypeApplications,
    TypeFamilies,
    TypeOperators
  other-modules:
  default-language: Haskell2010
  ghc-options: -Wall -fno-warn-tabs

executable joint-trapping-rain-water
  main-is: joint/trapping-rain-water.hs
  build-depends: base, joint, transformers
  default-extensions:
    DataKinds,
    ExplicitNamespaces,
    FlexibleContexts,
    LambdaCase,
    OverloadedStrings,
    PackageImports,
    RankNTypes,
    TypeApplications,
    TypeFamilies,
    TypeOperators
  other-modules:
  default-language: Haskell2010
  ghc-options: -Wall -fno-warn-tabs

executable joint-wolf-goat-cabbage
  main-is: joint/wolf-goat-cabbage.hs
  build-depends: base, joint, lens, transformers, distributive
  default-extensions:
    ConstraintKinds,
    DataKinds,
    ExplicitNamespaces,
    FlexibleContexts,
    LambdaCase,
    OverloadedStrings,
    PackageImports,
    RankNTypes,
    ScopedTypeVariables,
    TypeApplications,
    TypeFamilies,
    TypeOperators,
    QuantifiedConstraints
  other-modules:
  default-language: Haskell2010
  ghc-options: -Wall -fno-warn-tabs

executable pandora-balanced-parentheses
  main-is: pandora/balanced-parentheses.hs
  build-depends: base, pandora
  default-extensions:
    ConstraintKinds,
    DataKinds,
    ExplicitNamespaces,
    FlexibleContexts,
    LambdaCase,
    NoImplicitPrelude,
    OverloadedStrings,
    PackageImports,
    RankNTypes,
    ScopedTypeVariables,
    StandaloneDeriving,
    TypeApplications,
    TypeFamilies,
    TypeOperators
  other-modules:
  default-language: Haskell2010
  ghc-options: -Wall -fno-warn-tabs

executable pandora-ca-rule
  main-is: pandora/ca-rule.hs
  build-depends: base, pandora
  default-extensions:
    ConstraintKinds,
    DataKinds,
    ExplicitNamespaces,
    FlexibleContexts,
    LambdaCase,
    NoImplicitPrelude,
    OverloadedStrings,
    PackageImports,
    RankNTypes,
    ScopedTypeVariables,
    StandaloneDeriving,
    TypeApplications,
    TypeFamilies,
    TypeOperators,
    TypeSynonymInstances
  other-modules:
  default-language: Haskell2010
  ghc-options: -Wall -fno-warn-tabs -fno-strictness

executable pandora-decode-morse-code
  main-is: pandora/decode-morse-code.hs
  build-depends: base, pandora
  default-extensions:
    DataKinds,
    ExplicitNamespaces,
    FlexibleContexts,
    LambdaCase,
    NoImplicitPrelude,
    OverloadedStrings,
    PackageImports,
    RankNTypes,
    ScopedTypeVariables,
    StandaloneDeriving,
    TypeApplications,
    TypeFamilies,
    TypeOperators,
    QuantifiedConstraints
  other-modules:
  default-language: Haskell2010
  ghc-options: -Wall -fno-warn-tabs
  ghc-options: -Wall -fno-warn-tabs

executable pandora-json-parser
  main-is: pandora/json-parser.hs
  build-depends: base, pandora
  default-extensions:
    DataKinds,
    ExplicitNamespaces,
    FlexibleContexts,
    LambdaCase,
    NoImplicitPrelude,
    OverloadedStrings,
    PackageImports,
    RankNTypes,
    ScopedTypeVariables,
    StandaloneDeriving,
    TypeApplications,
    TypeFamilies,
    TypeOperators,
    QuantifiedConstraints
  other-modules:
  default-language: Haskell2010
  ghc-options: -Wall -fno-warn-tabs


executable pandora-matrix-in-clockwise-spiral
  main-is: pandora/matrix-in-clockwise-spiral.hs
  build-depends: base, pandora
  default-extensions:
    ConstraintKinds,
    DataKinds,
    ExplicitNamespaces,
    FlexibleContexts,
    FlexibleInstances,
    GADTs,
    LambdaCase,
    MultiParamTypeClasses,
    NoImplicitPrelude,
    OverloadedStrings,
    PackageImports,
    RankNTypes,
    ScopedTypeVariables,
    StandaloneDeriving,
    TypeApplications,
    TypeFamilies,
    TypeOperators,
    QuantifiedConstraints
  other-modules:
  default-language: Haskell2010
  ghc-options: -Wall -fno-warn-tabs

executable pandora-probability
  main-is: pandora/Probability.hs
  build-depends: base, pandora
  default-extensions:
    DataKinds,
    ExplicitNamespaces,
    FlexibleContexts,
    FlexibleInstances,
    LambdaCase,
    MultiParamTypeClasses,
    NoImplicitPrelude,
    OverloadedStrings,
    PackageImports,
    RankNTypes,
    ScopedTypeVariables,
    StandaloneDeriving,
    TypeApplications,
    TypeFamilies,
    TypeOperators,
    TypeSynonymInstances
  other-modules:
  default-language: Haskell2010
  ghc-options: -Wall -fno-warn-tabs



executable pandora-stock-prices
  main-is: pandora/stock-prices.hs
  build-depends: base, pandora
  default-extensions:
    ConstraintKinds,
    DataKinds,
    ExplicitNamespaces,
    FlexibleContexts,
    FlexibleInstances,
    LambdaCase,
    LiberalTypeSynonyms,
    NoImplicitPrelude,
    OverloadedStrings,
    PackageImports,
    RankNTypes,
    ScopedTypeVariables,
    StandaloneDeriving,
    TypeApplications,
    TypeFamilies,
    TypeOperators,
    TypeSynonymInstances,
    QuantifiedConstraints
  other-modules:
  default-language: Haskell2010
  ghc-options: -Wall -fno-warn-tabs


executable pandora-trapping-rain-water
  main-is: pandora/trapping-rain-water.hs
  build-depends: base, pandora
  default-extensions:
    ConstraintKinds,
    DataKinds,
    ExplicitNamespaces,
    FlexibleContexts,
    FlexibleInstances,
    LambdaCase,
    LiberalTypeSynonyms,
    NoImplicitPrelude,
    OverloadedStrings,
    PackageImports,
    RankNTypes,
    ScopedTypeVariables,
    StandaloneDeriving,
    TypeApplications,
    TypeFamilies,
    TypeOperators,
    TypeSynonymInstances,
    QuantifiedConstraints
  other-modules:
  default-language: Haskell2010
  ghc-options: -Wall -fno-warn-tabs

executable pandora-wolf-goat-cabbage
  main-is: pandora/wolf-goat-cabbage.hs
  build-depends: base, pandora
  default-extensions:
    ConstraintKinds,
    DataKinds,
    ExplicitNamespaces,
    FlexibleContexts,
    FlexibleInstances,
    LambdaCase,
    LiberalTypeSynonyms,
    NoImplicitPrelude,
    OverloadedStrings,
    PackageImports,
    RankNTypes,
    ScopedTypeVariables,
    StandaloneDeriving,
    TypeApplications,
    TypeFamilies,
    TypeOperators,
    TypeSynonymInstances,
    QuantifiedConstraints
  other-modules:
  default-language: Haskell2010
  ghc-options: -Wall -fno-warn-tabs
